feat: add mobile gesture utilities and security features
- Implement mobile gesture utilities including swipe, tap, long press, pinch, and pull to refresh.
- Introduce security utilities with CSP configuration, input sanitization, token management, and rate limiting.
- Add service worker registration and management for offline capabilities.
- Update Vite configuration for PWA support, image optimization, and bundle analysis.
- Mark modern features and testing tasks as complete in task status documentation.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,5 +52,16 @@
     "recommendedQuantity": "Recommended Quantity",
     "urgency": "Urgency",
     "estimatedCost": "Estimated Cost"
+  },
+  "offline": {
+    "message": "You are currently offline. Some features may be limited.",
+    "cacheNotice": "Showing cached data",
+    "noData": "No offline data available"
+  },
+  "update": {
+    "available": "A new version is available.",
+    "apply": "Update",
+    "installing": "Installing update...",
+    "success": "Update applied successfully"
   }
 }
