--- a/src/locales/he.json
+++ b/src/locales/he.json
@@ -52,5 +52,16 @@
     "recommendedQuantity": "כמות מומלצת",
     "urgency": "דחיפות",
     "estimatedCost": "עלות משוערת"
+  },
+  "offline": {
+    "message": "אתה כרגע לא מחובר לאינטרנט. חלק מהתכונות עלולות להיות מוגבלות.",
+    "cacheNotice": "מציג נתונים שמורים",
+    "noData": "אין נתונים זמינים במצב לא מקוון"
+  },
+  "update": {
+    "available": "גרסה חדשה זמינה.",
+    "apply": "עדכן",
+    "installing": "מתקין עדכון...",
+    "success": "העדכון יושם בהצלחה"
   }
 }
